@@ -97,7 +97,7 @@ class DMSReader(base.Reader):
 
         def __init__(self,filename,convert_units=None,**kwargs):
                 if convert_units is None:
-                        convert_units = MDAnalysis.core.flags['convert_gromacs_lengths']
+                        convert_units = MDAnalysis.core.flags['convert_lengths']
                 self.convert_units = convert_units  # convert length and time to base units
 
                 coords_list = None
