@@ -79,6 +79,7 @@ The rules for this file:
     every timestep in order to avoid unexpected behavior (Issue 138)
   * AtomGroup.velocities is now a (managed) attribute and not a method
     anymore: replace 'ag.velocities()' with 'ag.velocities'
+  * changed the name of the flag 'convert_gromacs_lengths' to 'convert_lengths'
 
   Fixes
 
@@ -103,7 +104,7 @@ The rules for this file:
   * fixed AtomGroup.ts Timestep instance not containing all available 
     information (Issue 163)
   * fixed Timestep copy method returning a base Timestep rather than 
-    appropriate format (Issue 164) 
+    appropriate format (Issue 164)
 
 12/24/12 danny.parton, jandom, orbeckst, jjlights03, jphillips, naveen.michaudagrawal, andy.somogyi, sebastien.buchoux
 
